[package]
name = "video-utils-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Portable Rust video, audio, frame, subtitle, and streaming utilities built around packet-copy first workflows."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rheosoph/video-utils-rs"
homepage = "https://github.com/Rheosoph/video-utils-rs"
documentation = "https://docs.rs/video-utils-rs"
keywords = ["video", "audio", "media", "mp4", "hls"]
categories = ["multimedia", "multimedia::video", "multimedia::audio"]
exclude = ["/tmp", "/.codacy", "/.github", "/target"]

[dependencies]
bytes = "1.11.1"
thiserror = "2.0.18"

clap = { version = "4.5.60", features = ["derive"], optional = true }
ab_glyph = { version = "0.2.32", optional = true }
fast_image_resize = { version = "5.5.0", default-features = false, optional = true }
gif = { version = "0.14.2", optional = true }
h264-reader = { version = "0.8.0", optional = true }
hound = { version = "3.5.1", optional = true }
image = { version = "0.25.10", default-features = false, features = ["avif", "gif", "jpeg", "png", "webp"], optional = true }
imageproc = { version = "0.25.1", default-features = false, optional = true }
m3u8-rs = { version = "6.0.0", default-features = false, features = ["parser"], optional = true }
matroska-demuxer = { version = "0.7.0", optional = true }
mp4e = { version = "1.0.5", optional = true }
muxide = { version = "0.2.5", optional = true }
png = { version = "0.18.1", optional = true }
ravif = { version = "0.13.0", default-features = false, optional = true }
rav1e = { version = "0.8.1", default-features = false, features = ["threading"], optional = true }
re_mp4 = { version = "0.5.0", default-features = false, optional = true }
resvg = { version = "0.47.0", default-features = false, features = ["text"], optional = true }
rubato = { version = "2.0.0", default-features = false, optional = true }
rust_h264 = { version = "0.4.0", optional = true }
rust_h265 = { version = "0.1.0", optional = true }
symphonia = { version = "0.5.5", default-features = false, features = ["aac", "adpcm", "aiff", "flac", "isomp4", "mkv", "mp1", "mp2", "mp3", "ogg", "pcm", "vorbis", "wav"], optional = true }
v_frame = { version = "0.3.9", optional = true }
yuv = { version = "0.8.16", default-features = false, optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", optional = true, features = ["Win32_Foundation", "Win32_Media_MediaFoundation", "Win32_System_Com"] }

[target.'cfg(not(any(target_family = "wasm", target_os = "android", target_os = "ios", target_os = "tvos")))'.dependencies]
object_store = { version = "0.12.4", features = ["gcp", "aws", "azure", "serde", "serde_json", "cloud"] }

[target.'cfg(any(target_family = "wasm", target_os = "android", target_os = "ios", target_os = "tvos"))'.dependencies]
object_store = { version = "0.12.4", default-features = false }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2.17", features = ["js"] }
js-sys = { version = "0.3.99", optional = true }
wasm-bindgen = { version = "0.2.122", optional = true }
wasm-bindgen-futures = { version = "0.4.72", optional = true }
web-sys = { version = "0.3.99", optional = true, features = [
    "AudioDecoder",
    "AudioDecoderConfig",
    "AudioDecoderSupport",
    "AudioEncoder",
    "AudioEncoderConfig",
    "AudioEncoderSupport",
    "VideoDecoder",
    "VideoDecoderConfig",
    "VideoDecoderSupport",
    "VideoEncoder",
    "VideoEncoderConfig",
    "VideoEncoderSupport",
] }

[features]
default = ["cli", "portable-core", "platform-codecs"]
portable-core = ["packet-ops", "containers", "audio-core", "frame-core", "subtitles", "streaming"]
cli = ["dep:clap"]

# Packet/container boundaries. These compile parser/muxer crates but keep their
# usage behind the public node/data model.
containers = ["dep:matroska-demuxer", "dep:muxide", "dep:re_mp4"]
packet-ops = ["dep:h264-reader"]
mp4e-muxer = ["containers", "dep:mp4e"]

# Pure Rust audio/frame helpers implemented in this crate. The richer IO/codec
# dependencies stay opt-in so mobile/WASM consumers do not pull them by accident.
audio-core = []
audio-io = ["audio-core", "dep:hound", "dep:rubato", "dep:symphonia"]
frame-core = []
image-io = ["frame-core", "dep:fast_image_resize", "dep:image", "dep:imageproc", "dep:v_frame", "dep:yuv"]
preview = ["image-io", "dep:gif", "dep:png", "dep:ravif"]
svg = ["image-io", "dep:resvg"]
subtitles = ["dep:ab_glyph"]
streaming = ["dep:m3u8-rs"]

# Platform backend descriptors and native probe/open adapters. The default
# platform lane uses OS/system codecs without bundling patented codec
# implementations.
platform-codecs = ["dep:js-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys", "dep:windows"]

# Explicit backend lanes. These intentionally do not enable FFmpeg/libav-family crates.
codec-h264-rust = ["dep:rust_h264"]
codec-h265-rust = ["dep:rust_h265"]
codec-av1-rust = ["dep:rav1e"]
codec-openh264-ffi = []
codec-apple = []
codec-android = []
codec-windows = ["dep:windows"]
codec-gstreamer = []
codec-web = ["dep:js-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys"]

[lib]
name = "video_utils_rs"
path = "src/lib.rs"

[[bin]]
name = "video-utils"
path = "src/main.rs"

[dev-dependencies]
futures = "0.3"
